src/CAPI/CAPI_RegControls.pas

unit CAPI_RegControls;

interface

uses
    CAPI_Utils,
    CAPI_Types;

procedure RegControls_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
procedure RegControls_Get_AllNames_GR(); CDECL;
function RegControls_Get_CTPrimary(): Double; CDECL;
function RegControls_Get_Delay(): Double; CDECL;
function RegControls_Get_First(): Integer; CDECL;
function RegControls_Get_ForwardBand(): Double; CDECL;
function RegControls_Get_ForwardR(): Double; CDECL;
function RegControls_Get_ForwardVreg(): Double; CDECL;
function RegControls_Get_ForwardX(): Double; CDECL;
function RegControls_Get_IsInverseTime(): TAPIBoolean; CDECL;
function RegControls_Get_IsReversible(): TAPIBoolean; CDECL;
function RegControls_Get_MaxTapChange(): Integer; CDECL;
function RegControls_Get_MonitoredBus(): PAnsiChar; CDECL;
function RegControls_Get_Name(): PAnsiChar; CDECL;
function RegControls_Get_Next(): Integer; CDECL;
function RegControls_Get_PTratio(): Double; CDECL;
function RegControls_Get_ReverseBand(): Double; CDECL;
function RegControls_Get_ReverseR(): Double; CDECL;
function RegControls_Get_ReverseVreg(): Double; CDECL;
function RegControls_Get_ReverseX(): Double; CDECL;
function RegControls_Get_TapDelay(): Double; CDECL;
function RegControls_Get_TapWinding(): Integer; CDECL;
function RegControls_Get_Transformer(): PAnsiChar; CDECL;
function RegControls_Get_VoltageLimit(): Double; CDECL;
function RegControls_Get_Winding(): Integer; CDECL;
function RegControls_Get_TapNumber(): Integer; CDECL;
procedure RegControls_Set_CTPrimary(Value: Double); CDECL;
procedure RegControls_Set_Delay(Value: Double); CDECL;
procedure RegControls_Set_ForwardBand(Value: Double); CDECL;
procedure RegControls_Set_ForwardR(Value: Double); CDECL;
procedure RegControls_Set_ForwardVreg(Value: Double); CDECL;
procedure RegControls_Set_ForwardX(Value: Double); CDECL;
procedure RegControls_Set_IsInverseTime(Value: TAPIBoolean); CDECL;
procedure RegControls_Set_IsReversible(Value: TAPIBoolean); CDECL;
procedure RegControls_Set_MaxTapChange(Value: Integer); CDECL;
procedure RegControls_Set_MonitoredBus(const Value: PAnsiChar); CDECL;
procedure RegControls_Set_Name(const Value: PAnsiChar); CDECL;
procedure RegControls_Set_PTratio(Value: Double); CDECL;
procedure RegControls_Set_ReverseBand(Value: Double); CDECL;
procedure RegControls_Set_ReverseR(Value: Double); CDECL;
procedure RegControls_Set_ReverseVreg(Value: Double); CDECL;
procedure RegControls_Set_ReverseX(Value: Double); CDECL;
procedure RegControls_Set_TapDelay(Value: Double); CDECL;
procedure RegControls_Set_TapWinding(Value: Integer); CDECL;
procedure RegControls_Set_Transformer(const Value: PAnsiChar); CDECL;
procedure RegControls_Set_VoltageLimit(Value: Double); CDECL;
procedure RegControls_Set_Winding(Value: Integer); CDECL;
procedure RegControls_Set_TapNumber(Value: Integer); CDECL;
function RegControls_Get_Count(): Integer; CDECL;
procedure RegControls_Reset(); CDECL;

// API extensions
function RegControls_Get_idx(): Integer; CDECL;
procedure RegControls_Set_idx(Value: Integer); CDECL;

implementation

uses
    CAPI_Constants,
    DSSGlobals,
    Executive,
    ControlElem,
    RegControl,
    SysUtils,
    DSSPointerList,
    DSSClass,
    DSSHelper,
    DSSObjectHelper;

type
    TObj = TRegControlObj;

//------------------------------------------------------------------------------
function _activeObj(DSS: TDSSContext; out obj: TObj): Boolean; inline;
begin
    Result := False;
    obj := NIL;
    if InvalidCircuit(DSS) then
        Exit;
    
    obj := DSS.ActiveCircuit.RegControls.Active;
    if obj = NIL then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSS, 'No active %s object found! Activate one and retry.', ['RegControl'], 8989);
        end;
        Exit;
    end;
    
    Result := True;
end;
//------------------------------------------------------------------------------
procedure Set_Parameter(DSS: TDSSContext; const idx: Integer; const val: String); overload;
var
    elem: TObj;
begin
    if not _activeObj(DSS, elem) then
        Exit;
    DSS.SolutionAbort := FALSE;  // Reset for commands entered from outside
    elem.ParsePropertyValue(idx, val);
end;
//------------------------------------------------------------------------------
procedure Set_Parameter(DSS: TDSSContext; const idx: Integer; const val: Double); overload;
var
    elem: TObj;
begin
    if not _activeObj(DSS, elem) then
        Exit;
    DSS.SolutionAbort := FALSE;  // Reset for commands entered from outside
    elem.SetDouble(idx, val);
end;
//------------------------------------------------------------------------------
procedure Set_Parameter(DSS: TDSSContext; const idx: Integer; const val: Integer); overload;
var
    elem: TObj;
begin
    if not _activeObj(DSS, elem) then
        Exit;
    DSS.SolutionAbort := FALSE;  // Reset for commands entered from outside
    elem.SetInteger(idx, val);
end;
//------------------------------------------------------------------------------
procedure RegControls_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Generic_Get_AllNames(ResultPtr, ResultCount, DSSPrime.ActiveCircuit.RegControls, False);
end;

procedure RegControls_Get_AllNames_GR(); CDECL;
// Same as RegControls_Get_AllNames but uses global result (GR) pointers
begin
    RegControls_Get_AllNames(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;
